--- a/templates/landing.html
+++ b/templates/landing.html
@@ -15,10 +15,10 @@
                 <div class="nav-links" id="navLinks">
                     <i class="fa fa-times" onclick="hideMenu()"></i> 
                     <ul>
-                        <li><a href="">Price Comparison Tool</a></li>
+                        <li><a href="{{ url_for('shopping_list') }}">Price Comparison Tool</a></li>
                         <li><a href="{{ url_for('recipes') }}">Recipes & Substitutes</a></li>
                         <li><a href="">Sustainability & Health Badges</a></li>
-                        <li><a href="">Blog</a></li>
+                        <li><a href="{{ url_for('blog') }}">Blog</a></li>
                         <li><a href="">About Us</a></li>
                         <li><a href="">FAQs & Support</a></li>
                     </ul>
@@ -131,7 +131,7 @@
                     <h3>Newsletter</h3>
                     <form>
                          <i class="far fa-envelope"></i>
-                        <input type="email" placeholder="Enter your email id" required>
+                        <input type="email" placeholder="Enter your email" required>
                         <button type="submit"><i class="fas fa-arrow-right"></i></button>
                     </form>
                     <div class="social-icons">
