--- a/templates/shopping_list.html
+++ b/templates/shopping_list.html
@@ -30,7 +30,7 @@
                     <li><a href="">Price Comparison Tool</a></li>
                     <li><a href="{{ url_for('recipes') }}">Recipes & Substitutes</a></li>
                     <li><a href="">Sustainability & Health Badges</a></li>
-                    <li><a href="">Blog</a></li>
+                    <li><a href="{{ url_for('blog') }}">Blog</a></li>
                     <li><a href="">About Us</a></li>
                     <li><a href="">FAQs & Support</a></li>
                 </ul>
