Updated files and added new assets

--- a/static/style.css
+++ b/static/style.css
@@ -506,7 +506,7 @@ nav .fa{
     width: 90%;
     margin: auto;
     text-align: center;
-    padding-top: 50px;
+    padding-top: 35vh;
 }
 .row {
     margin-top: 3%;
