--- a/static/style.css
+++ b/static/style.css
@@ -317,7 +317,7 @@ nav .fa{
     width: 80%;
     margin: auto;
     text-align: center;
-    padding-top: 50px;
+    padding-top: 200px;
 }
 
 #portfolio{
@@ -396,6 +396,12 @@ nav .fa{
 .btn:hover{
     background: #ff004f;
 }
+
+@media (max-width:700px){
+    .recipes{
+        padding-top: 20vh;
+    }
+} 
 
 /* FOOTER PAGES */
 .footer_pages{
