--- a/static/style.css
+++ b/static/style.css
@@ -236,23 +236,33 @@ ul li .fa-circle {
 /* For mobile devices */
 @media (max-width: 480px) {
     .list {
-        padding: 130px 20px 50px; /* keep the right padding at 20px */
-        padding-left: 10px; /* reduce the left padding to 10px */
+        padding: 130px 0px 50px; /*this has widened the search bar*/
     }
     .shopping-list {
         max-width: 100%;
-        padding: 20px 15px 40px;
-        padding-left: 5px; /* reduce the left padding to 5px */
+        padding: 1px 1px 1px; /* Reduced horizontal padding */
+    }
+    .shopping-list .row {
+        display: flex;  
+        padding: 0;
+        margin: 0; /* Ensure no margins */
+        margin-bottom: 25px;
     }
     input {
         font-size: 12px;
-        padding: 6px;
+        padding: 6px 5px; 
+        flex-grow: 1; 
+        width: 100%; /* Set width to 100% */
+        margin-right: 10px; /* Space between input and button */
     }
     button {
         font-size: 12px;
-        padding: 10px 30px;
+        padding: 10px 20px; /* Reduced horizontal padding */
+        width: auto; 
+        flex-shrink: 0; 
     }
 }
+
 
 
 
