--- a/static/style.css
+++ b/static/style.css
@@ -236,7 +236,7 @@ ul li .fa-circle {
 /* For mobile devices */
 @media (max-width: 480px) {
     .list {
-        padding: 130px 0px 50px; /*this has widened the search bar*/
+        padding: 130px 0px 50px; /*this 0px has widened the search bar*/
     }
     .shopping-list {
         max-width: 100%;
@@ -625,24 +625,7 @@ nav .fa{
     background: #f44336;
 }
 */
-@media (max-width:700px){
-    .sub-header h1{
-        font-size: 24px;
-    }
-    .blog-right {
-        display: none;
-    }
-    .blog-left {
-        flex-basis: 100%; /* Make it occupy the full width */
-        max-width: 100%; /* Ensure it doesn't get restricted by any max-width */
-    }
-    .row {
-        justify-content: center; /* Center .blog-left */
-    }
-    .blog{
-        padding-top: 20vh;
-    }
-} 
+
 .blog-post {
     border: 1px solid #ccc;
     padding: 35px;
@@ -707,3 +690,61 @@ nav .fa{
     background-color: #f44336;
     color: #fff;
 }*/
+
+/* By default, content is visible and "Read More" is hidden */
+.hide-content-mobile {
+    display: block;
+}
+
+.read-more-mobile {
+    display: none;
+}
+
+
+@media (max-width:700px){
+    .sub-header h1{
+        font-size: 24px;
+    }
+    .blog-left h2 {
+        font-size: 18px;
+    }
+    .blog-right {
+        display: none;
+    }
+    .blog-left {
+        flex-basis: 100%; /* Make it occupy the full width */
+        max-width: 100%; /* Ensure it doesn't get restricted by any max-width */
+    }
+    .row {
+        justify-content: center; /* Center .blog-left */
+    }
+    .blog{
+        padding-top: 20vh;
+    }
+    /* On mobile devices, hide the content and show the "Read More" button */
+
+    .hide-content-mobile {
+        display: none;
+    }
+
+    .read-more-mobile {
+        display: block;
+    }
+} 
+.read-more-mobile {
+    background-color: transparent; /* Ensure there's no default background */
+    color: #f44336;
+    border: 1px solid #f44336;
+    padding: 8px 12px;
+    border-radius: 4px;
+    font-family: inherit; /* Ensure the button uses the same font as other elements */
+    font-size: inherit;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+    outline: none; /* Removes the default outline seen on some browsers on focus */
+}
+
+.read-more-mobile:hover {
+    background-color: #f44336;
+    color: #fff;
+}
